@@ -169,6 +169,16 @@ class CmdLineTest(unittest.TestCase):
         self.assertEqual(rc, 0)
         self.assert_(data.startswith(b'x'), data)
 
+    def test_large_PYTHONPATH(self):
+        with test.support.EnvironmentVarGuard() as env:
+            path1 = "ABCDE" * 100
+            path2 = "FGHIJ" * 100
+            env['PYTHONPATH'] = path1 + os.pathsep + path2
+            p = _spawn_python('-S', '-c', 'import sys; print(sys.path)')
+            stdout, _ = p.communicate()
+            self.assert_(path1.encode('ascii') in stdout)
+            self.assert_(path2.encode('ascii') in stdout)
+
 
 def test_main():
     test.support.run_unittest(CmdLineTest)
